[gd_scene load_steps=2 format=3 uid="uid://dmu02e07hc3pk"]

[ext_resource type="Script" uid="uid://sc4p6ux42ibv" path="res://inventory_and_recipes/user_interface/sub_total/sub_total.gd" id="1_566x4"]

[node name="SubTotal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_566x4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="ItemName" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Name"

[node name="SellPrice" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Sell Price"

[node name="BuyPrice" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Buy Price"

[node name="Quantity" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
min_value = -100.0
allow_greater = true
allow_lesser = true

[node name="SubTotalValue" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "SubTotal"
